# rest-server-api-tests

./: .gitignore  pyproject.toml  test_crud.py  test_server_unit_operations.py
resources/: tasks.py
server/: rest-server-comments.txt  rest-server.py
