[tool.poetry]
name = "api-tests"
version = "0.1.0"
description = "testing api crud operation on local server (rest-server.py)"
authors = ["Serhii Arseniuk"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-HTTPAuth = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
